
* #10896: Remove Stream, Genlex and Pervasives. Also remove legacy standalone
  bigarray library (the Bigarray module is now part of the standard library).
  (Nicolás Ojeda Bär, review by Kate Deplaix and Anil Madhavapeddy)

* #10924: Add deprecated attribute to Printexc.catch, Printf.kprintf and
  Unix.SO_ERROR.
  (Nicolás Ojeda Bär, review by Damien Doligez)

### Other libraries:

* #9071, #9100, #10935: Reimplement `Thread.exit()` as raising the
  exception `Thread.Exit`, and mark `Thread.exit` as deprecated.
  The new implementation changes the behavior compared with
  the OCaml 4 implementation.  For example, the new implementation
  causes `Fun.finally` finalizers to be run and catch-all exception
  handlers to prevent termination.
  (Jacques-Henri Jourdan and Xavier Leroy, review by Damien Doligez,
  Guillaume Munch-Maccagnoni, Gabriel Scherer, and Enguerrand Decorne)

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

- #10909: Disable warning 59 (assignment to immutable blocks) unless flambda
  invariant checks are enabled.
  (Vincent Laviron, review by Gabriel Scherer)

### Internal/compiler-libs changes:

- #10878, #10909: restore flambda after the Multicore merge.
  (Vincent Laviron, review by Gabriel Scherer and Xavier Leroy)

- #10864, #10888: restore afl-fuzz mode for sequential programs.
  (Jan Midtgaard, review by Xavier Leroy and Gabriel Scherer)


### Build system:

### Bug fixes:

OCaml 4.14.0
----------------

### Language features:

- #10462: Add attribute to produce a compiler error for polls.
  (Sadiq Jaffer, review by Mark Shinwell, Stephen Dolan
   and Guillaume Munch-Maccagnoni)

- #10437: Allow explicit binders for type variables.
  (Stephen Dolan, review by Leo White)

- #10441: Remove unnecessary parentheses surrounding immediate objects.
  Allow 'object ... end # f', 'f object ... end', etc.
  (Yan Dong, review by Nicolás Ojeda Bär, Florian Angeletti and Gabriel Scherer)
